--- a/DangNhap/Properties/Resources.resx
+++ b/DangNhap/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="add-user (3)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add-user (3).svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v18.2, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
+  <data name="no_avatar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\no_avatar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="add-user (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add-user (1).svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v18.2, Version=18.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
@@ -214,7 +217,7 @@
   <data name="iconfinder_Closed_Book_Icon_1741323" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconfinder_Closed_Book_Icon_1741323.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="no_avatar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\no_avatar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="19d8a051527db023e96c1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\19d8a051527db023e96c1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
